--- a/releasenotes/1.11.rst
+++ b/releasenotes/1.11.rst
@@ -61,11 +61,23 @@ dtl
 
 * Enable looping over objects with {% for key, value in object %}, https://bugs.dojotoolkit.org/ticket/17251 . This will break existing templates that treats objects as array of values (ie discarding keys).
 
+
+layout
+----
+
+* Fixed `dojox/layout/GridContainerLite` to work in apps using more than one instance or version of Dojo.
+
+
+mdnd
+----
+
+* Fixed to work in apps using more than one instance or version of Dojo.
+
+
 Store
 -----
 
 * A new dojox/store/OData store has been added.
-
 
 
 Util
