--- a/releasenotes/1.11.rst
+++ b/releasenotes/1.11.rst
@@ -46,6 +46,11 @@ of Dojo might include fixes to support future releases of these browsers, but it
 Dojo Core
 =========
 
+dojo/on
+-------
+
+Added selectorTarget property from on.selector as property of event object, https://bugs.dojotoolkit.org/ticket/18355
+
 
 Dijit
 =====
