--- a/releasenotes/1.11.rst
+++ b/releasenotes/1.11.rst
@@ -54,7 +54,7 @@ Added selectorTarget property from on.selector as property of event object, http
 dojo/string
 -----------
 
-You can now escape $ in expessions, making it possible to specify a queryExpr: '*-bash*' inside a template without having to modify the caller or widget (for example, within a FilteringSelect Dijit https://bugs.dojotoolkit.org/ticket/18207
+You can now escape $ in expessions, making it possible to specify a queryExpr: '*${0}*' inside a template without having to modify the caller or widget (for example, within a FilteringSelect Dijit https://bugs.dojotoolkit.org/ticket/18207
 
 Dijit
 =====
