Add info about Closure Compiler language option

--- a/releasenotes/1.11.rst
+++ b/releasenotes/1.11.rst
@@ -103,6 +103,7 @@ Store
 Util
 ====
 
+* Add support for ES language version for Closure Compiler. https://bugs.dojotoolkit.org/ticket/16601
 
 Demos
 =====
