--- a/releasenotes/1.11.rst
+++ b/releasenotes/1.11.rst
@@ -66,7 +66,8 @@ Added selectorTarget property from on.selector as property of event object, http
 dojo/sniff
 ---------
 
-Added feature tests for Edge, 'has("edge")', and modern Opera, 'has("opr")'. That said, usage of this is strongly discourated. Whenever possible, you should not use sniffing and should instead use feature detection.
+Added feature tests for Edge, 'has("edge")', and modern Opera, 'has("opr")'. Note also that 'has("ie")' is false for IE11 as it was replaced with 'has("trident")' per request from Microsoft http://mail.dojotoolkit.org/pipermail/dojo-interest/2013-December/079827.html .
+Usage of browser sniffing is strongly discourated. Whenever possible, you should not use sniffing and should instead use feature detection.
 
 dojo/string
 -----------
