Added dom-contains feature test

--- a/releasenotes/1.11.rst
+++ b/releasenotes/1.11.rst
@@ -65,6 +65,10 @@ dojo/_base/kernel
 
 Added 'has("console-as-object")' for IE9 console quirks. http://bugs.dojotoolkit.org/ticket/18197
 
+dojo/dom
+--------
+
+Added 'has("dom-contains")'. Browsers that natively support 'DOMNode.contains()' will now use this directly.
 
 dojo/html
 ---------
