Add info about DynamoDB store

--- a/releasenotes/1.11.rst
+++ b/releasenotes/1.11.rst
@@ -133,6 +133,8 @@ Store
 -----
 
 * A new dojox/store/OData store has been added.
+* A new dojox/store/DynamoDB store has been added.
+* New tests for dojox/store now use Intern.
 
 
 Util
