--- a/releasenotes/1.11.rst
+++ b/releasenotes/1.11.rst
@@ -99,7 +99,7 @@ You can now escape $ in expessions, making it possible to specify a queryExpr: '
 Dijit
 =====
 
-
+keep class id if srcNodeRef.id is empty string in create(), https://bugs.dojotoolkit.org/ticket/18803
 
 
 DojoX
