update release notes per Dylans comments

--- a/releasenotes/1.12.rst
+++ b/releasenotes/1.12.rst
@@ -18,11 +18,11 @@ of Dojo might include fixes to support future releases of these browsers, but it
 
 * Edge 12
 
-* Firefox 3.6-45
+* Firefox 3.6-50
 
-* Safari 6-9
+* Safari 6-10
 
-* Chrome 13-50
+* Chrome 13-54
 
 * IE 8-11
 
@@ -30,26 +30,25 @@ of Dojo might include fixes to support future releases of these browsers, but it
 
 **Mobile (dojox/mobile)**
 
-* iOS (Mobile Safari), 6.x, 7.x, 8.x, and 9.x (including all Dijit widgets except Editor)
+* iOS (Mobile Safari), 6.x, 7.x, 8.x, 9.x, and 10.x (including all Dijit widgets except Editor)
 
-* Android (Android Browser and Chrome) 2.3, 4.0-4.4, 5.0-5.1, and  6.0 (Platform browser and Chrome browser) (including all Dijit widgets for Android 4.0-4.4 except Editor)
+* Android (Android Browser and Chrome) 2.3, 4.0-4.4, 5.0-5.1, 6.0, and 7.0 (Platform browser and Chrome browser) (including all Dijit widgets for Android 4.0-4.4 except Editor)
 
 * BlackBerry 6-7 & 10 (Platform browser)
 
 * Windows Phone 8 (IE10)
 
-* Mobile compatibility on desktop browsers: Edge 12, IE 8-11, Firefox 4-43, Chrome 13-47
+* Mobile compatibility on desktop browsers: Edge 12, IE 8-11, Firefox 4-50, Chrome 13-54
 
 
 **Server-Side User Agents**
 
-* Node 0.10.X, 0.12.x, 4.x, 5.x
+* Node 0.10.X, 0.12.x, 4.x, 5.x, 6.x
 
 General
 =======
 
 * Update language in documentation to reflect Dojo Foundation being superseded by the JS Foundation.
-* Updated copyright year in README for Dojo, Dijit, DojoX, Util.
 * Upgraded Trac to 1.0.9, fixing issues with tickets that threw a ``UnicodeEncodeError``.
 
 Dojo Core
@@ -165,7 +164,7 @@ Util
 Build System
 ------------
 
-* Updated Closure Compiler to v20160713. Added ``compilationLevel`` option to ``optimizeOptions``. Added all compilation level set functions to ``optimizeOptions``. Added ``languageOut`` option to ``optimizeOptions``. Updated ``languageIn`` and ``languageOut`` options to use ``fromString`` enum function. Updated documentation accordingly.
+* Updated Closure Compiler to v20160713 to support ES6 grammar. Added ``compilationLevel`` option to ``optimizeOptions``. Added all compilation level set functions to ``optimizeOptions``. Added ``languageOut`` option to ``optimizeOptions``. Updated ``languageIn`` and ``languageOut`` options to use ``fromString`` enum function. Updated documentation accordingly.
 * Fixed hardcoded ``./util/..`` paths so they don't break scripts elsewhere within Dojo when installed via NPM.
 * Fixed build profiles including themes package.
 
