--- a/releasenotes/1.12.rst
+++ b/releasenotes/1.12.rst
@@ -164,7 +164,7 @@ Util
 Build System
 ------------
 
-* Updated Closure Compiler to v20160911 to support ES6 grammar. Added ``compilationLevel`` option to ``optimizeOptions``. Added all compilation level set functions to ``optimizeOptions``. Added ``languageOut`` option to ``optimizeOptions``. Updated ``languageIn`` and ``languageOut`` options to use ``fromString`` enum function. Updated documentation accordingly.
+* Updated Closure Compiler to v20160911 to support ES6 grammar. Added ``compilationLevel`` option to ``optimizeOptions``. Added all compilation level set functions to ``optimizeOptions``. Added ``languageOut`` option to ``optimizeOptions``. Updated ``languageIn`` and ``languageOut`` options to use ``fromString`` enum function. Updated documentation accordingly. Note that this updated version of Closure Compiler does not work correctly with Java 6, so either Java 7 or 8 is required.
 * Fixed hardcoded ``./util/..`` paths so they don't break scripts elsewhere within Dojo when installed via NPM.
 * Fixed build profiles including themes package.
 
